--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,5 +1,10 @@
 name: End to End tests
-on: [push]
+on:
+  workflow_call:
+    inputs:
+      artifact-id:
+        required: true
+        type: string
 jobs:
   run-e2e-tests:
     runs-on: ubuntu-latest
@@ -8,7 +13,7 @@ jobs:
       - name: Download package
         uses: actions/download-artifact@v4
         with:
-          name: deb-package
+          artifact-id: ${{ inputs.artifact-id }}
           path: ./
       - name: install package
         run: |
