--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,12 @@
 name: create release
 on:
-  workflow_call:
+  push:
+
 jobs:
+  build:
+    uses: ./.github/workflows/build.yml
+    with:
+      artifact-name: release
   create-release:
     runs-on: ubuntu-latest
     outputs:
@@ -30,12 +35,12 @@ jobs:
             GITHUB_TOKEN: ${{ github.token }}
   upload-artifacts:
     runs-on: ubuntu-latest
-    needs: create-release         
+    needs: [create-release,build]         
     steps:
         - name: Download package
           uses: actions/download-artifact@v4
           with:
-            name: deb-package
+            artifact-id: ${{ needs.build.outputs.deb-artifact }}
             path: ./deb/
         - name: upload linux artifact
           uses: actions/upload-release-asset@v1
@@ -50,7 +55,7 @@ jobs:
         - name: Download RPM package
           uses: actions/download-artifact@v4
           with:
-            name: rpm-package
+            artifact-id: ${{ needs.build.outputs.rpm-artifact }}
             path: ./rpm/
         - name: Upload RPM release asset
           uses: actions/upload-release-asset@v1
@@ -65,7 +70,7 @@ jobs:
         - name: Download binary
           uses: actions/download-artifact@v4
           with:
-            name: compiled-binary
+            artifact-id: ${{ needs.build.outputs.bin-artifact }}
             path: ./bin/
         - name: Create tarball of bin
           run: tar -czf compiled-binary_${{ needs.create-release.outputs.version }}.tar.gz -C ./bin .
