--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,6 @@ jobs:
     steps:
         - name: Checkout repository
           uses: actions/checkout@v4
-          with:
-            fetch-depth: 0          # fetch all history + tags
         - name: Get latest tag
           id: version
           run: |
@@ -30,6 +28,7 @@ jobs:
           id: create_release
           with:
             draft: true
+            body_path: CHANGELOG.md
             prerelease: false
             release_name: Release ${{ steps.version.outputs.version }}
             tag_name: ${{ github.ref }}
