--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           artifact-ids: ${{ inputs.artifact-id }}
           path: ./deb/
+          merge-multiple: true
       - name: install package
         run: |
           sudo dpkg -i ./deb/*.deb
