--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "CLI for managing code_aster versions"
 license = "MIT"
 
 [dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
 clap = { version = "4.5.21", features = ["derive"] }
 anyhow = "1.0"
 regex = "1.11.1"
