--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -16,6 +16,7 @@ jobs:
 
   build-and-deploy:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true 
     steps:
 
       - name: "Checkout"
