--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "cave"
 version = "0.1.0"
-authors = ["Simvia <hadrien.riols@simvia.tech>"]
+authors = ["Simvia <basile.marchand@simvia.tech>"]
 edition = "2021"
 description = "CLI for managing code_aster versions"
 license = "MIT"
 
 [dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
 clap = { version = "4.5.21", features = ["derive"] }
 anyhow = "1.0"
 regex = "1.11.1"
@@ -39,7 +40,6 @@ assets = [
     ["target/release/cave", "usr/bin/", "755"],
     ["man/cave.1", "usr/share/man/man1/", "644"]
 ]
-depends = ["protobuf-compiler"]
 
 [package.metadata.generate-rpm]
 assets = [
