--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ clap = { version = "4.5.21", features = ["derive"] }
 anyhow = "1.0"
 regex = "1.11.1"
 dirs = "6.0.0"
-reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 term_size = "0.3"
@@ -20,8 +20,6 @@ colored = "2.0"
 chrono = "0.4"
 chrono-tz = "0.8"
 uuid = { version = "1", features = ["v4"] }
-tonic = { version = "0.10", features = ["tls", "tls-roots"] }
-prost = "0.12"
 tokio = { version = "1", features = ["full"] }
 log = "0.4.28"
 env_logger = "0.11.8"
@@ -30,7 +28,6 @@ env_logger = "0.11.8"
 clap = { version = "4.5.21", features = ["derive"] }
 clap_complete = "4"
 clap_mangen = "0.2.29"
-tonic-build = "0.10"
 
 [dev-dependencies]
 assert_cmd = "2.0"
