--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ uuid = { version = "1", features = ["v4"] }
 tokio = { version = "1", features = ["full"] }
 log = "0.4.28"
 env_logger = "0.11.8"
+semver = "1.0.27"
 
 [build-dependencies]
 clap = { version = "4.5.21", features = ["derive"] }
