--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ on:
       bin-artifact:
         description: "Binary artifact ID"
         value: ${{ jobs.build-binary-and-package.outputs.bin-artifact }}
+      man-artifact:
+        description: "Man page artifact ID"
+        value: ${{ jobs.build-binary-and-package.outputs.man-artifact }}
 
 jobs:
   build-binary-and-package:
@@ -26,6 +29,7 @@ jobs:
       deb-artifact: ${{ steps.upload-deb.outputs.artifact-id }}
       rpm-artifact: ${{ steps.upload-rpm.outputs.artifact-id }}
       bin-artifact: ${{ steps.upload-bin.outputs.artifact-id }}
+      man-artifact: ${{ steps.upload-man.outputs.artifact-id }}
     container:
       image: rust:bullseye
     steps:
@@ -66,6 +70,13 @@ jobs:
         with:
           name: ${{ inputs.artifact-name }}compiled-binary
           path: target/x86_64-unknown-linux-musl/release/cave
+
+      - name: Upload man page
+        uses: actions/upload-artifact@v4
+        id: upload-man
+        with:
+          name: ${{ inputs.artifact-name }}man-page
+          path: man/cave.1
 
       - name: Cache cargo tools
         uses: actions/cache@v4
